# VirtualTestDriveFramework

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README
cmake/: FindGraphviz.cmake
config/: adtf_spectral_saliency.prototxt  bird_view.prototxt  boolean_maps_saliency.prototxt  ego_motion.prototxt  gbvs_saliency.prototxt  highpass_saliency.prototxt  itti_saliency.prototxt  kitti_fov.prototxt  loadpipeline_example.prototxt  mit_benchmark.prototxt  object_saliency.prototxt  skiseminar.prototxt  spectral_saliency.prototxt  vw_demo.prototxt
data/example/: adtf_spectral_whitening.cpp
data/test/set00/: 00000000.tiff  00000001.tiff  00000002.tiff
data/test/set01/: test.avi
data/test/tmp/00/: image_00000001.tiff  image_00000002.tiff  image_00000003.tiff
data/test/tmp/01/: test.avi
include/: config.h
include/adtf/io/: ConvertImage.h  GazeReader.h  ImageReader.h  ImageWriter.h  VisualPerceptionWriter.h
include/adtf/salbox/: Gaze.h  Image.h
include/core/: Bus.h  CodeGen.h  Core.h  Node.h  Pipeline.h  Port.h  Processable.h  PropertyMap.h  ThreadPool.h  Utils.h
include/eyetribe/: CameraCalibration.h  CameraDistortion.h  CollectCalibrationCorners.h  DetectCalibrationCorners.h  DrawCalibrationCorners.h  DrawEyeball.h  DrawGaze.h  DrawStereoCalibration.h  EyeballEstimation.h  GlintDetector.h  PupilDetection.h  StereoCalibration.h  StereoEyeBallDetection.h  StereoGlintFilter.h  StereoGlintMatcher.h  StereoRectification.h  Undistortion.h  VideoReader.h
include/flow/: Flow.h  OpticalFlow.h  Trajectory.h
include/gaze/: FOV.h  Gaze.h  GazeMovement.h
include/io/: CSVReader.h  ImageMemoryReader.h  ImageMemoryWriter.h  ImageReader.h  ImageShow.h  MemoryReader.h  MemoryWriter.h  VideoReader.h  VideoWriter.h
include/kitti/: CalibrationReader.h  DrawBirdView.h  DrawTracklet.h  DrawTrajectory.h  EgoMotion.h  FOVToCam.h  ImageReader.h  KittiReader.h  OXTSPose.h  OXTSReader.h  TrackletReader.h  TrackletSaliency.h  Velodyne2PolarImage.h  VelodyneReader.h  tracklets.h
include/plot/: Figure.h  GridLayout.h  Quiver.h
include/run_configurations/: RunConfigurations.h
include/saliency/: Saliency.h  Tracking.h
include/saliency/activation/: BooleanMaps.h  GBVS.h  HighPass.h  IttiKoch.h  Spectral.h
include/saliency/feature/: Orientation.h
include/segmentation/: RegionGrow.h
include/sensor_fusion/: Noise.h  PriorityGraph.h
include/tracking/: Tracklet.h
include/utils/: Error.h  FPSCounter.h  Image.h  Matrix.h  Normalize.h  Polar.h  Resolution.h
install/config/: .ego_motion.prototxt.swp  adtf_spectral_saliency.prototxt  bird_view.prototxt  ego_motion.prototxt  highpass_saliency.prototxt  object_saliency.prototxt  object_saliency_hannes.prototxt  random_gaze.prototxt  spectral_saliency.prototxt  test_config.prototxt  vw_demo.prototxt
install/data/example/: loadpipeline_example.cpp
install/data/test/set00/: 00000003.tiff  00000004.tiff
install/include/adtf/io/: GazeWriter.h  ImageWriter.h  TrackedObjectReader.h  (+1 more)
install/include/core/: CodeGen.h  Core.h  Node.h  Port.h  PropertyMap.h  Utils.h
install/include/eyetribe/: DetectCalibrationCorners.h  DrawCalibrationCorners.h  VideoReader.h
install/include/flow/: Flow.h  OpticalFlow.h  Spline.h  Trajectory.h
install/include/gaze/: FOV.h  Random.h
install/include/io/: DirectoryScanner.h  ImageReader.h  ImageWriter.h
install/include/kitti/: KittiReader.h  OXTSPose.h  OXTSReader.h  TrackletReader.h  Velodyne2PolarImage.h  VelodyneReader.h
install/include/plot/: Image.h  Plot.h  Quiver.h
install/include/saliency/: Saliency.h  Tracking.h
install/include/utils/: Error.h  FPSCounter.h  GraphViz.h  Image.h  Matrix.h  Resolution.h
install/scripts/: config_template.sh  protobuild_example_boolean_maps.sh  protobuild_example_gbvs.sh  protobuild_example_highpass.sh  protobuild_example_object_saliency.sh  protobuild_example_spectral.sh
scripts/: protobuild_example.sh  protobuild_example_itti.sh
src/adtf/: CMakeLists.txt  ConvertImage.cpp  GazeReader.cpp  GazeWriter.cpp  TrackedObjectReader.cpp  TrackedObjectSaliencyWriter.cpp  VisualPerceptionWriter.cpp
src/core/: CMakeLists.txt  CodeGen.cpp  Pipeline.cpp  Port.cpp  PropertyMap.cpp  Utils.cpp  node.proto
src/eyetribe/: CMakeLists.txt  CameraCalibration.cpp  DetectCalibrationCorners.cpp  DrawCalibrationCorners.cpp  StereoCalibration.cpp  Undistortion.cpp  VideoReader.cpp
src/gaze/: CMakeLists.txt  FOV.cpp  Gaze.cpp  GazeMovement.cpp  Random.cpp
src/io/: CMakeLists.txt  DirectoryScanner.cpp  ImageMemoryWriter.cpp  ImageShow.cpp  ImageWriter.cpp  VideoReader.cpp  VideoWriter.cpp
src/kitti/: CMakeLists.txt  CalibrationReader.cpp  DrawTracklet.cpp  EgoMotion.cpp  FOVToCam.cpp  ImageReader.cpp  KittiReader.cpp  OXTSPose.cpp  OXTSReader.cpp  TrackletReader.cpp  TrackletSaliency.cpp  Velodyne2PolarImage.cpp  VelodyneMatrix.cpp  VelodyneReader.cpp
src/plot/: CMakeLists.txt  Figure.cpp  Plot.cpp
src/run_configurations/: CMakeLists.txt  RunConfigurations.cpp
src/saliency/: CMakeLists.txt
src/saliency/activation/: BooleanMaps.cpp  HighPass.cpp  Spectral.cpp
src/saliency/evaluation/: Pearson.cpp
src/saliency/feature/: Orientation.cpp
src/test/: CMakeLists.txt  io.test  kitti.test  main.bak  test.cpp  utils.test
src/tools/: CMakeLists.txt  sammeln.txt
src/tools/adtfsalboxexample/: CMakeLists.txt  main.cpp
src/tools/adtfsalboxtest/: CMakeLists.txt  test.cpp
src/tools/booleanmaps/: CMakeLists.txt  main.cpp
src/tools/eyetriberun/: CMakeLists.txt  main.cpp
src/tools/eyetribetriggertest/: CMakeLists.txt  main.cpp
src/tools/loadpipeline/: CMakeLists.txt  main.cpp
src/tools/plotoxts/: CMakeLists.txt  main.cpp
src/tools/plottracklets/: CMakeLists.txt  main.cpp
src/tools/plotvelodyne/: CMakeLists.txt  main.cpp
src/tools/protobuild/: CMakeLists.txt  build.h.in  kbhit.cpp  kbhit.h  main.cpp
src/tools/quick_tests/: CMakeLists.txt  main.cpp  sammeln.cpp
src/tools/spectralwhitening/: CMakeLists.txt  main.cpp
src/tracking/: CMakeLists.txt  Tracklet.cpp
src/utils/: CMakeLists.txt  Error.cpp  GraphViz.cpp  Polar.cpp  kbhit.cpp
(+16 files in other folders)
